service-gitea-ssh.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  namespace: gitea
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.201
  selector:
    app: gitea
  ports:
    - port: 22
      targetPort: 22
      protocol: TCP
