service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: gitea
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
