service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea
spec:
  type: ClusterIP
  selector:
    app: gitea
  ports:
    - port: 80
      targetPort: 3000
    - port: 22
      targetPort: 22
