ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-web
  namespace: gitea
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd
    traefik.ingress.kubernetes.io/forwarded-headers: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: letsencrypt-dns-aws
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - gitea.bleservoisier.fr
      secretName: gitea-tls
  rules:
    - host: gitea.bleservoisier.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-web
                port:
                  number: 80
